# VectorFigures

./: .gitignore  CMakeLists.txt  ReadMe.md  VectorFigures.cbp  VectorFigures.depend
src/: Bounds.cpp  Bounds.h  Figure.cpp  Figure.h  FigureListManager.cpp  FigureListManager.h  Scene.cpp  Scene.h  Utilities.cpp  Utilities.h  Vector4.cpp  Vector4.h  main.cpp
src/Base/: CanvasObject.cpp  CanvasObject.h  IKeyboard.h  IMouse.h  IRender.h  ITransformable.h
src/Bounds/: Bounds.cpp  Bounds.h
src/Button/: Button.cpp  Button.h
src/Canvas/: gl_canvas2d.cpp  gl_canvas2d.h
src/ColorPicker/: ColorPicker.cpp  ColorPicker.h  ColorPickerPanel.cpp  ColorPickerPanel.h  ColorSlider.cpp  ColorSlider.h
src/Figure/: Figure.cpp  Figure.h  FigureListManager.cpp  FigureListManager.h
src/Label/: Label.cpp  Label.h
src/Managers/: GlobalManager.cpp  GlobalManager.h
src/Panel/: Panel.cpp  Panel.h
src/Scene/: Scene.cpp  Scene.h
src/Slider/: Slider.cpp  Slider.h
src/Vectors/: Float2.cpp  Float2.h  Float3.cpp  Float3.h  Float4.cpp  Float4.h
