cmake_minimum_required(VERSION 3.16)
project(VectorFigures)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(include/GL)
include_directories(src)
include_directories(src/Base)
include_directories(src/Button)
include_directories(src/Canvas)
include_directories(src/ColorPicker)
include_directories(src/Label)
include_directories(src/Managers)
include_directories(src/Panel)
include_directories(src/Slider)
include_directories(src/Vectors)

add_executable(VectorFigures
        include/GL/freeglut.h
        include/GL/freeglut_ext.h
        include/GL/freeglut_std.h
        include/GL/glut.h
        src/Base/CanvasObject.cpp
        src/Base/CanvasObject.h
        src/Base/IKeyboard.h
        src/Base/IMouse.h
        src/Base/IRender.h
        src/Base/ITransformable.h
        src/Button/Button.cpp
        src/Button/Button.h
        src/Canvas/gl_canvas2d.cpp
        src/Canvas/gl_canvas2d.h
        src/ColorPicker/ColorPicker.cpp
        src/ColorPicker/ColorPicker.h
        src/ColorPicker/ColorPickerPanel.cpp
        src/ColorPicker/ColorPickerPanel.h
        src/ColorPicker/ColorSlider.cpp
        src/ColorPicker/ColorSlider.h
        src/Label/Label.cpp
        src/Label/Label.h
        src/Managers/GlobalManager.cpp
        src/Managers/GlobalManager.h
        src/Panel/Panel.cpp
        src/Panel/Panel.h
        src/Slider/Slider.cpp
        src/Slider/Slider.h
        src/Vectors/Float2.cpp
        src/Vectors/Float2.h
        src/Vectors/Float3.cpp
        src/Vectors/Float3.h
        src/Vectors/Float4.cpp
        src/Vectors/Float4.h
        src/Bounds.cpp
        src/Bounds.h
        src/Figure.cpp
        src/Figure.h
        src/FigureListManager.cpp
        src/FigureListManager.h
        src/main.cpp
        src/Scene.cpp
        src/Scene.h
        src/Utilities.cpp
        src/Utilities.h
        ReadMe.md
        VectorFigures.cbp
        VectorFigures.depend)

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
include_directories( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )

target_link_libraries(VectorFigures ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
